<resources>
    <string name="app_name">MovieHub</string>
    <string name="action_settings">Settings</string>

    <string name="user_username">Username</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="menu">Menu</string>
    <string name="user_email">Email</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="movie_poster">movie_poster</string>
    <string name="logout">logout</string>
    <string name="year">Year: %1$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="actors">Actors: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="added_to_favourites">%1$s was added to favourites!</string>
    <string name="removed_from_favourites">%1$s was removed from favourites!</string>
    <string name="movie_title">%1$s (%2$s)</string>
    <string name="movie_category">%1$s, %2$s minutes</string>
    <string name="add_to_list">Add</string>
    <string name="remove_from_list">Remove</string>
    <string name="user_details">User details</string>
    <string name="logout_menu_item">Logout</string>
    <string name="add_comment">Send</string>
</resources>
