<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_view" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:id="@+id/username_edit_text" />

    <TextView
        android:text="@string/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_view" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:id="@+id/password_edit_text" />

    <TextView
        android:text="@string/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_view" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:id="@+id/email_edit_text" />

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_button" />
</LinearLayout>