<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDetailedMovieBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDetailedMovieForeground"
        android:layout_margin="@dimen/detailed_movie_margin_border_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/detailedMovieTitle"
            android:textSize="@dimen/detailed_movie_title_text_size"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/detailedMoviePoster"
            android:layout_below="@+id/detailedMovieTitle"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailedMovieYear"
            android:layout_below="@+id/detailedMoviePoster"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:text="@string/year"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedMovieYear"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:id="@+id/detailedMovieDuration"
            android:text="@string/duration"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailedMovieCategory"
            android:layout_below="@+id/detailedMovieDuration"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:text="@string/category"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailedMovieActors"
            android:text="@string/actors"
            android:layout_below="@+id/detailedMovieCategory"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailedMovieDescription"
            android:text="@string/description"
            android:layout_below="@+id/detailedMovieActors"
            android:layout_margin="@dimen/detailed_movie_margin_border_size"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailedMovieDescription"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/add_comment_content" />

        <Button
            android:text="Add Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_comment_content"
            android:id="@+id/addComment" />

        <Button
            android:text="Show Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addComment"
            android:id="@+id/showComments" />

        <FrameLayout
            android:id="@+id/comments"
            android:layout_below="@+id/showComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </RelativeLayout>
</ScrollView>