<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="info.noname.moviehub.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/username_edit_text" />

    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/username_edit_text"
        android:layout_alignLeft="@+id/username_edit_text"
        android:layout_alignStart="@+id/username_edit_text"
        android:layout_marginTop="79dp"
        android:id="@+id/password_edit_text" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:id="@+id/login_button" />

    <TextView
        android:text="@string/user_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/username_text_view" />

    <TextView
        android:text="@string/user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_edit_text"
        android:layout_alignLeft="@+id/username_text_view"
        android:layout_alignStart="@+id/username_text_view"
        android:layout_marginTop="35dp"
        android:id="@+id/password_text_view" />

</RelativeLayout>
